// obs-scene-switcher plugin
// Copyright (C) 2025 ksmksks
// SPDX-License-Identifier: GPL-2.0-or-later

#pragma once
#include "oauth/twitch_oauth.hpp"
#include "core/reward_rule.hpp"
#include <QWidget>
#include <QComboBox>
#include <QSpinBox>
#include <QPushButton>
#include <QCheckBox>
#include <QList>

class RuleRow : public QWidget {
	Q_OBJECT

public:
	explicit RuleRow(QWidget *parent = nullptr);

	void setSceneList(const QList<QString> &scenes);
	void setRewardList(const std::vector<RewardInfo> &rewards);

	QString currentScene() const;
	QString reward() const;
	std::string rewardId() const;
	QString targetScene() const;
	int revertSeconds() const;
	bool enabled() const;  // ルールの有効/無効状態を取得
	RewardRule rule() const;

	std::string getSelectedRewardId() const;
	void setRule(const RewardRule &rule);

signals:
	void removeRequested(RuleRow *self);

private slots:
	void updateVisualState();  // 無効時のグレーアウト表示

private:
	QCheckBox *enabledCheckBox_;
	QComboBox *originalSceneBox_;
	QComboBox *rewardBox_;
	QComboBox *targetSceneBox_;
	QSpinBox *revertSpin_;
	QPushButton *removeButton_;

	std::vector<RewardInfo> rewardList_;
};
